--- a/src/main/resources/templates/products/productTemplate.html
+++ b/src/main/resources/templates/products/productTemplate.html
@@ -60,7 +60,8 @@
     <div id="content">
         <div id="productContainer">
             <div id="product">
-                <p>
+                <p th:text="#{loremIpsum}">
+
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc sit amet convallis nisi. Sed ac sem
                     nec
                     velit facilisis euismod. Phasellus ex ex, ultrices ut fermentum non, eleifend et nisl. Etiam nec dui
